1、优化解密速度 2、优化启动脚本 3、兼容微信3.9.11.9版本