@@ -1,4 +1,6 @@
-﻿@echo off & setlocal enabledelayedexpansion
+chcp 65001
+@echo off
+setlocal enabledelayedexpansion
 
 cd %~dp0
 
@@ -8,22 +10,37 @@ set SERVER_NAME=wx-dump-admin
 
 set CLASS_PATH=".;..\conf;..\lib\*;..\ext-lib\*"
 
-set JAVA_OPTS=-server -Xmx2g -Xms2g -Xmn1g -Xss256k -XX:+DisableExplicitGC  -XX:LargePageSizeInBytes=128m
-for /f tokens^=2-5^ delims^=^" %%j in ('java -fullversion 2^>^&1') do set "version=%%j"
-echo %version%| findstr "^1.8" >nul && (
-   set "JAVA_OPTS=%JAVA_OPTS%  -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70"
+set JAVA_OPTS=-server
+set JAVA_OPTS=%JAVA_OPTS% -Xmx4g -Xms4g
+set JAVA_OPTS=%JAVA_OPTS% -XX:MaxMetaspaceSize=512m
+set JAVA_OPTS=%JAVA_OPTS% -XX:+UseG1GC
+set JAVA_OPTS=%JAVA_OPTS% -XX:InitiatingHeapOccupancyPercent=45
+set JAVA_OPTS=%JAVA_OPTS% -XX:+ParallelRefProcEnabled
+set JAVA_OPTS=%JAVA_OPTS% -XX:+HeapDumpOnOutOfMemoryError
+set JAVA_OPTS=%JAVA_OPTS% -XX:HeapDumpPath=%LOG_HOME%\heapdump.hprof
+set JAVA_OPTS=%JAVA_OPTS% -Dfile.encoding=UTF-8
+set JAVA_OPTS=%JAVA_OPTS% -XX:-OmitStackTraceInFastThrow
+
+for /f "tokens=3" %%i in ('java -version 2^>^&1 ^| findstr /i "version"') do (
+    set version=%%i
+    goto :breakloop
 )
-echo %version%| findstr "^11" >nul && (
-    set "JAVA_OPTS=%JAVA_OPTS%
-)
-echo %version%| findstr "^17" >nul && (
-   set "JAVA_OPTS=%JAVA_OPTS%
+:breakloop
+
+for /f "tokens=1-3 delims=." %%a in ("%version%") do (
+    set MAJOR_VERSION=%%a
 )
 
-set MAIN_CLASS=com.xcs.wx.WxDumpApplication
+set MAJOR_VERSION=%MAJOR_VERSION:"=%
+set MAJOR_VERSION=%MAJOR_VERSION: =%
+
+if %MAJOR_VERSION% LSS 11 (
+    echo JDK 版本必须为 11 或更高才能运行该应用程序。
+    exit /b 1
+)
 
 echo Starting the %SERVER_NAME% ...
 
-java %JAVA_OPTS% -Dfile.encoding=UTF-8 -Dspring.thymeleaf.prefix=file:../html/ -Dlog.home=%LOG_HOME% -classpath %CLASS_PATH% %MAIN_CLASS%
+java %JAVA_OPTS% -Dspring.thymeleaf.prefix=file:../html/ -Dlog.home=%LOG_HOME% -classpath %CLASS_PATH% com.xcs.wx.WxDumpApplication
 
 pause
